--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,7 +13,6 @@
     <link rel="stylesheet" href="css/jquery.bxslider.css" />
     <!-- Main Css File -->
     <link rel="stylesheet" href="css/main.css" />
-
 </head>
 
 <body>
@@ -35,8 +35,8 @@
     <div class="header">
         <div class="over_lay">
 
-            
-<!--
+
+            <!--
     <div class="slider">
        <li>
            <h2>welcome from<span> classic one</span></h2>
@@ -79,7 +79,7 @@
         <!--- start first item --->
         <div>
             <div class="item">
-<!--                <i class="fa fa-mobile fa-4x fa-fw"></i>-->
+                <!--                <i class="fa fa-mobile fa-4x fa-fw"></i>-->
                 <i class="fa fa-mobile-alt fa-4x fa-fw"></i>
                 <div class="info">
                     <h3>Responsive</h3>
@@ -366,7 +366,9 @@
                 </ul>
             </div>
         </div>
-        <div class="copy"><p>copyright &copy; 2020 all right reeserve</p></div>
+        <div class="copy">
+            <p>copyright &copy; 2022 all right reeserve</p>
+        </div>
     </div>
     <!--- end our footer --->
     <i class="fa fa-arrow-up" id="up"></i>
@@ -374,4 +376,6 @@
     <script src="js/jquery.bxslider.js"></script>
     <script src="js/jquery.mixitup.js"></script>
     <script src="js/main.js"></script>
-</body></html>
+</body>
+
+</html>
