--- a/index.html
+++ b/index.html
@@ -376,6 +376,4 @@
     <script src="js/jquery.bxslider.js"></script>
     <script src="js/jquery.mixitup.js"></script>
     <script src="js/main.js"></script>
-</body>
-
-</html>
+</body></html>
