--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Template 2</title>
+    <title>Template-2</title>
     <!-- Font Aowsome -->
     <link rel="stylesheet" href="css/all.min.css">
     <!-- Normalize -->
@@ -12,7 +12,7 @@
     <!-- Call Jquery Bxslider -->
     <link rel="stylesheet" href="css/jquery.bxslider.css" />
     <!-- Main Css File -->
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
@@ -22,9 +22,9 @@
         <div class="links">
             <ul>
                 <li><a href="#" data-section=".nav_bar">home</a></li>
-                <li><a href="#" data-section=".footer">about</a></li>
-                <li><a href="#" data-section=".testmonials">testmonials</a></li>
+                <li><a href="#" data-section=".testmonials">opinions</a></li>
                 <li><a href="#" data-section=".our_projects">projects</a></li>
+                <li><a href="#" data-section=".footer">about</a></li>
             </ul>
         </div>
         <i class="fas fa-bars"></i>
