--- a/index.html
+++ b/index.html
@@ -204,16 +204,16 @@
                 <img src="image/client.png">
             </div>
             <div class="box">
-                <div class="overlay">mohamed</div>
+                <div class="overlay">osama elzero</div>
+                <img src="image/osama.jpg">
+            </div>
+            <div class="box">
+                <div class="overlay">ibraheem adil</div>
+                <img src="image/ibraheem.jpg">
+            </div>
+            <div class="box">
+                <div class="overlay">kervi mool</div>
                 <img src="image/kevin.png">
-            </div>
-            <div class="box">
-                <div class="overlay">mahmoode</div>
-                <img src="image/client.png">
-            </div>
-            <div class="box">
-                <div class="overlay">ibraheem</div>
-                <img src="image/harv.png">
             </div>
         </div>
     </div>
